--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.6.8",
     "firebase": "^10.5.0",
     "flowbite": "^2.2.0",
     "framer-motion": "^10.16.16",
