--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-multistep": "^5.5.9",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
