--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_DB="mongodb://localhost:27017"
+MONGO_DB="mongodb+srv://arijitghosh1203:arijit12@cluster0.fwzojpz.mongodb.net/uprep?retryWrites=true&w=majority&appName=Cluster0"
 SECRET_KEY="abc"
+PORT=8000
