--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 MONGO_DB="mongodb+srv://arijitghosh1203:arijit12@cluster0.fwzojpz.mongodb.net/uprep?retryWrites=true&w=majority&appName=Cluster0"
 SECRET_KEY="abc"
 PORT=8000
+PASS=xglb xyza fplh ltmw
+USER=arijitghosh1203@gmail.com
