--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.4"
+    "mongoose": "^8.2.4",
+    "nodemailer": "^6.9.13"
   }
 }
