--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-multistep": "^5.5.9",
     "react-router-dom": "^6.17.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
     "universal-cookie": "^7.1.4"
