--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-# VITE_SERVER="https://college-project-1-ifwe.onrender.com"
-VITE_SERVER="http://localhost:8000"
+VITE_SERVER=""
+# VITE_SERVER="http://localhost:8000"
