added in Profile pages + added 2 controller in backend

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_SERVER="https://college-project-zyo1.onrender.com"
-# VITE_SERVER="http://localhost:8000"
+# VITE_SERVER="https://college-project-zyo1.onrender.com"
+VITE_SERVER="http://localhost:8000"
