--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_DB="mongodb+srv://arijitghosh1203:arijit12@cluster0.fwzojpz.mongodb.net/uprep?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_DB="mongodb+srv://Arsh:12345678910@cluster0.fwzojpz.mongodb.net/uprep?retryWrites=true&w=majority&appName=Cluster0"
 # MONGO_DB="mongodb://localhost:27017"
 SECRET_KEY="abc"
 PORT=8000
