--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,1 @@
-# VITE_SERVER="https://collegeproject-production-b9d6.up.railway.app/"
-VITE_SERVER="https://college-project-uuxj.vercel.app/"
-# VITE_SERVER="https://collegeproject-production-b9d6.up.railway.app/"
+VITE_SERVER="https://college-project-zyo1.onrender.com"
