fix profile page

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-# MONGO_DB="mongodb+srv://Arsh:12345678910@cluster0.fwzojpz.mongodb.net/uprep?retryWrites=true&w=majority&appName=Cluster0"
-MONGO_DB="mongodb://localhost:27017"
+MONGO_DB="mongodb+srv://Arsh:12345678910@cluster0.fwzojpz.mongodb.net/uprep?retryWrites=true&w=majority&appName=Cluster0"
+# MONGO_DB="mongodb://localhost:27017"
 SECRET_KEY="abc"
 PORT=8000
 PASS="guzk pmxt pusy oloc"
