--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@netlify/functions": "^2.6.0",
-    "@types/express": "^4.17.21",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -15,9 +13,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.13",
-    "serverless-http": "^3.2.0"
+    "nodemailer": "^6.9.13"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
